jvm-optsを削除